clean: avoid "double border" on .page-header + .table

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -65,6 +65,10 @@ h1, h2, h3, h4, h5, h6 {
       margin: 0 0 10px;
     }
   }
+
+  & ~ .table > tbody > tr:first-child > td {
+    border-top: none;
+  }
 }
 
 // ------------------ Admin ------------------
